--- a/client/src/styles/department.css
+++ b/client/src/styles/department.css
@@ -112,3 +112,34 @@
     border-radius: 10px;
     margin-bottom: 15px;
 }
+
+.checkbox-group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* spacing between each department */
+}
+
+.checkbox-line {
+  display: flex;
+  align-items: start;
+}
+
+.checkbox-label {
+  margin-left: 5px;
+  font-weight: 500;
+}
+
+.small-input {
+  padding: 5px;
+  font-size: 14px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.btn-primary {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
