--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+
+
+
+
 @import './styles/variables.css';
 @import './styles/global.css';
 @import './styles/layout.css';
@@ -6,3 +10,8 @@
 @import './styles/dashboard.css';
 @import './styles/register.css';
 @import './styles/responsive.css';
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
