--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,9 +6,9 @@
 @import './styles/global.css';
 @import './styles/layout.css';
 @import './styles/forms.css';
-@import './styles/login.css';
+/* @import './styles/login.css'; */
 @import './styles/dashboard.css';
-@import './styles/register.css';
+/* @import './styles/register.css'; */
 @import './styles/responsive.css';
 
 
